--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
 					<input id="video-id" type="text" name="v" v-model="videoIdInput" />
 					<button>Refresh</button>
 				</form>
-				<div id="info-text" class="flex-fill"><span>{{ infoText }}</span></div>
-				<button v-on:click="save">Save</button>
-				<button v-on:click="exportSRT">Export as SRT</button>
+				<div id="info-text" class="flex-fill p-1"><span>{{ infoText }}</span></div>
+				<button @click="save">Save</button>
+				<button @click="exportSRT">Export SRT</button>
+				<button @click="importSRT">Import SRT</button>
+				<a id="export" class="d-none"></a>
+				<input id="import" class="d-none" type="file" @change="getSRT">
 			</div>
 			<div id="iframe" class="position-relative flex-fill">
 				<iframe
@@ -51,7 +54,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="timeline" class="position-relative" v-on:click="timelineClick">
+			<div id="timeline" class="position-relative" @click="timelineClick">
 				<div
 					id="timeline-box"
 					class="position-absolute"
@@ -91,7 +94,7 @@
 				class="p-2 d-flex flex-row"
 				:class="{'bg-secondary': sub.active}"
 			>
-				<div class="time me-3" v-on:click="seek(sub.startTime)">
+				<div class="time me-3" @click="seek(sub.startTime)">
 					<div class="start-time">
 						{{ getHour(sub.startTime) }} :
 						{{ getMin(sub.startTime) }} :
@@ -107,18 +110,19 @@
 					class="text p-0 bg-dark text-white flex-fill"
 					placeholder="Enter Subtitles Here"
 					v-model="sub.text"
-					v-on:blur="save"
+					@blur="save"
 				></textarea>
 			</div>
 			<button
 				type="button"
 				class="btn btn-dark w-100 text-center p-3"
-				v-on:click="addSubtitle"
+				@click="addSubtitle"
 			>
 				+
 			</button>
 		</div>
 	</div>
+	<script src="parse-srt.js" type="text/javascript"></script>
 	<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
