--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 				<button @click="save">Save</button>
 				<button @click="exportSRT">Export SRT</button>
 				<button @click="importSRT">Import SRT</button>
+				<button @click="triggerHelp">Help</button>
 				<a id="export" class="d-none"></a>
 				<input id="import" class="d-none" type="file" @change="getSRT">
 			</div>
@@ -120,6 +121,16 @@
 			>
 				+
 			</button>
+		</div>
+		<div v-if="showHelp" id="help" class="position-absolute p-5" @click="triggerHelp">
+			<span>- Ctrl + Space : Play / Pause</span><br>
+			<span>- Ctrl + Enter : Add subtitles</span><br>
+			<span>- Ctrl + S : Save (to Cookie)</span><br>
+			<span>- Ctrl + E : Export SRT</span><br>
+			<span>- Ctrl + I : Import SRT</span><br>
+			<span>- Ctrl + H : Help</span><br>
+			<span>- (Timeline) mousewheel : Scroll</span><br>
+			<span>- (Timeline) Ctrl + mousewheel : Zoom</span><br>
 		</div>
 	</div>
 	<script src="parse-srt.js" type="text/javascript"></script>
