fix add sub func

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			<button
 				type="button"
 				class="btn btn-dark w-100 text-center p-3"
-				@click="addSubtitle"
+				@click="addSubtitle()"
 			>
 				+
 			</button>
