--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<!-- <div id="iframe-cover" class="position-absolute"></div> -->
 				<div id="subs" class="w-100 position-absolute text-center h3">
 					<div
-						v-for="sub in subtitles.filter(x=>x.active).reverse()"
+						v-for="sub in subtitles.data.filter(x=>x.active).reverse()"
 					>
 						{{ sub.text }}
 					</div>
@@ -71,11 +71,11 @@
 				>
 					<div id="timeline-subs">
 						<div
-							v-for="sub in subtitles"
+							v-for="sub in subtitles.data"
 							class="position-absolute timeline-sub"
 							:style="{
-								left: sub.startTime * 100 / videoLength + '%',
-								right: 100 - sub.endTime * 100 / videoLength + '%'
+								left: sub.start * 100 / videoLength + '%',
+								right: 100 - sub.end * 100 / videoLength + '%'
 							}"
 						>
 							<div
@@ -109,20 +109,20 @@
 		</div>
 		<div id="cc" class="p-2">
 			<div
-				v-for="sub in subtitles"
+				v-for="sub in subtitles.data"
 				class="p-2 d-flex flex-row align-items-center"
 				:class="{'bg-secondary': sub.active}"
 			>
-				<div class="time me-3" @click="seek(sub.startTime)">
+				<div class="time me-3" @click="seek(sub.start)">
 					<div class="start-time">
-						{{ getHour(sub.startTime) }} :
-						{{ getMin(sub.startTime) }} :
-						{{ getSec(sub.startTime) }}
+						{{ getHour(sub.start) }} :
+						{{ getMin(sub.start) }} :
+						{{ getSec(sub.start) }}
 					</div>
 					<div class="end-time">
-						{{ getHour(sub.endTime) }} :
-						{{ getMin(sub.endTime) }} :
-						{{ getSec(sub.endTime) }}
+						{{ getHour(sub.end) }} :
+						{{ getMin(sub.end) }} :
+						{{ getSec(sub.end) }}
 					</div>
 				</div>
 				<textarea
@@ -158,6 +158,7 @@
 		</div>
 	</div>
 	<script src="parse-srt.js" type="text/javascript"></script>
+	<script src="subtitles.js" type="text/javascript"></script>
 	<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
