--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 	<meta property="og:description" content="Holofans">
 	<meta property="og:url" content="">
 	<meta property="og:site_name" content="Holofans">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TCZ8SVTSK2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || []
+		function gtag(){ dataLayer.push(arguments) }
+		gtag('js', new Date())
+		gtag('config', 'G-TCZ8SVTSK2')
+	</script>
 	<!--BOOTSTRAP-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
