--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
 				<h4>[ About ]</h4>
 				<p>
 					This webpage is created and designed by <a href="https://hackmd.io/@DeemoHarlos/share">Deemo Harlos</a>.<br>
+					This is an open-source project. This means ANYONE can contribute to this project,
+					either by testing, discussing, reporting issues, giving advices or create pull requests.<br>
 					Github Repo: <a href="https://github.io/DeemoHarlos/ytcc">https://github.io/DeemoHarlos/ytcc</a> |
 					<a href="https://github.com/DeemoHarlos/ytcc/issues/new">Report Bugs or Issues</a><br>
 					Buy me a coffee! Thanks for your support! <a href="https://ko-fi.com/harlosmusic">Ko-fi</a> |
