--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<title>YTCC</title>
 	<link href="index.css" rel="stylesheet">
 	<!--OG-->
-	<meta property="og:image" content="">
+	<!-- <meta property="og:image" content=""> -->
 	<meta property="og:type" content="website">
-	<meta property="og:description" content="Holofans">
-	<meta property="og:url" content="">
-	<meta property="og:site_name" content="Holofans">
+	<meta property="og:description" content="YTCC allows users to create subtitles for any video on YouTube.">
+	<meta property="og:url" content="http://deemoharlos.space/ytcc/">
+	<meta property="og:site_name" content="YouTube Video Closed Caption Tool (YTCC)">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TCZ8SVTSK2"></script>
 	<script>
