--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<meta property="og:url" content="http://deemoharlos.space/ytcc/">
 	<meta property="og:site_name" content="YouTube Video Closed Caption Tool (YTCC)">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-TCZ8SVTSK2"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116631189-4"></script>
 	<script>
 		window.dataLayer = window.dataLayer || []
 		function gtag(){ dataLayer.push(arguments) }
 		gtag('js', new Date())
-		gtag('config', 'G-TCZ8SVTSK2')
+		gtag('config', 'UA-116631189-4')
 	</script>
 	<!--BOOTSTRAP-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
