--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,6 +14,22 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
+
+    <!-- OG -->
+    <!-- <meta property="og:image" content=""> -->
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="<%= productDescription %>">
+    <!-- <meta property="og:url" content=""> -->
+    <meta property="og:site_name" content="YouTube Video Closed Caption Tool (YTCC)">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116631189-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag(){ dataLayer.push(arguments) }
+      gtag('js', new Date())
+      gtag('config', 'UA-116631189-4')
+    </script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
